# reverse-image-search-extension

./: .gitignore  README.md  package.json
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  db.py  main.py
apps/api/app/routers/: health.py
apps/api/app/services/: search_service.py  upload_service.py
apps/api/imagelab_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: conftest.py  test_cloud.py
apps/extension/: conversion-error.html  manifest.config.ts  options.html  package.json  popup.html  sidepanel.html  vite.config.ts
apps/extension/src/background/: contextMenus.ts  serviceWorker.ts
apps/extension/src/converter/: ErrorPage.ts  constants.ts  errorPage.css  errors.ts  filenames.test.ts  filenames.ts  imageConverter.ts  resize.test.ts  settings.test.ts  settings.ts  urls.ts
apps/extension/src/offscreen/: offscreen.html  offscreen.ts
apps/extension/src/options/: OptionsApp.tsx
apps/extension/src/shared/: ImageWorkspace.tsx  constants.ts  permissions.ts  storage.ts  types.ts
docs/: DEPLOYMENT.md  FREEMIUM_PLAN.md  PRIVACY.md  PRODUCT_SPEC.md
